--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ RESEND_API_KEY=re_your-resend-api-key
 FROM_EMAIL=support@yourdomain.com
 
 # Admin Default Credentials (for seeding)
-ADMIN_EMAIL=admin@nevellines.com
+ADMIN_EMAIL=admin@nevelline.com
 ADMIN_PASSWORD=your-secure-admin-password
 ADMIN_PASSWORD_HASH=
 
